プルのエラー解決の為のコミット

--- a/ふぉるてっしも！.vcxproj.filters
+++ b/ふぉるてっしも！.vcxproj.filters
@@ -29,7 +29,7 @@
       <UniqueIdentifier>{3358a49e-d8dd-48c1-a1e2-81346dcbc642}</UniqueIdentifier>
     </Filter>
     <Filter Include="ソース ファイル\Result">
-      <UniqueIdentifier>{98f21a7e-a410-40d5-be89-9cf78a140aa9}</UniqueIdentifier>
+      <UniqueIdentifier>{1dd2b150-3770-48ae-8b7a-47f0fc938267}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -129,6 +129,9 @@
     <ClCompile Include="field.cpp">
       <Filter>ソース ファイル\Game</Filter>
     </ClCompile>
+    <ClCompile Include="Game.cpp">
+      <Filter>ソース ファイル\Game</Filter>
+    </ClCompile>
     <ClCompile Include="ranking.cpp">
       <Filter>ソース ファイル\Game</Filter>
     </ClCompile>
@@ -150,34 +153,13 @@
     <ClCompile Include="titlelogo.cpp">
       <Filter>ソース ファイル\Title</Filter>
     </ClCompile>
-    <ClCompile Include="score.cpp">
-      <Filter>ソース ファイル\Game\UI</Filter>
-    </ClCompile>
-    <ClCompile Include="UIBonus.cpp">
-      <Filter>ソース ファイル\Game\UI</Filter>
-    </ClCompile>
-    <ClCompile Include="name.cpp">
-      <Filter>ソース ファイル\Result</Filter>
-    </ClCompile>
     <ClCompile Include="messageBox.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="score.cpp">
-      <Filter>ソース ファイル\Game\UI</Filter>
-    </ClCompile>
-    <ClCompile Include="UIBonus.cpp">
-      <Filter>ソース ファイル\Game\UI</Filter>
-    </ClCompile>
-<<<<<<< HEAD
-    <ClCompile Include="enemyRE.cpp">
-      <Filter>ソース ファイル\Game</Filter>
-=======
-    <ClCompile Include="Game.cpp">
-      <Filter>ソース ファイル\Scene</Filter>
-    </ClCompile>
-    <ClCompile Include="voicetank.cpp">
-      <Filter>ソース ファイル\Game\UI</Filter>
->>>>>>> 6169bb319f70f246eca3119a908aea2794dd004d
+    <ClCompile Include="score.cpp" />
+    <ClCompile Include="UIBonus.cpp" />
+    <ClCompile Include="Resultlogo.cpp">
+      <Filter>ソース ファイル\Result</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -280,6 +262,9 @@
     <ClInclude Include="field.h">
       <Filter>ソース ファイル\Game</Filter>
     </ClInclude>
+    <ClInclude Include="Game.h">
+      <Filter>ソース ファイル\Game</Filter>
+    </ClInclude>
     <ClInclude Include="ranking.h">
       <Filter>ソース ファイル\Game</Filter>
     </ClInclude>
@@ -304,34 +289,13 @@
     <ClInclude Include="titlelogo.h">
       <Filter>ソース ファイル\Title</Filter>
     </ClInclude>
-    <ClInclude Include="score.h">
-      <Filter>ソース ファイル\Game\UI</Filter>
-    </ClInclude>
-    <ClInclude Include="UIBonus.h">
-      <Filter>ソース ファイル\Game\UI</Filter>
-    </ClInclude>
-    <ClInclude Include="name.h">
-      <Filter>ソース ファイル\Result</Filter>
-    </ClInclude>
     <ClInclude Include="messageBox.h">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="score.h">
-      <Filter>ソース ファイル\Game\UI</Filter>
-    </ClInclude>
-    <ClInclude Include="UIBonus.h">
-      <Filter>ソース ファイル\Game\UI</Filter>
-    </ClInclude>
-<<<<<<< HEAD
-    <ClInclude Include="enemyRE.h">
-      <Filter>ソース ファイル\Game</Filter>
-=======
-    <ClInclude Include="Game.h">
-      <Filter>ソース ファイル\Scene</Filter>
-    </ClInclude>
-    <ClInclude Include="voicetank.h">
-      <Filter>ソース ファイル\Game\UI</Filter>
->>>>>>> 6169bb319f70f246eca3119a908aea2794dd004d
+    <ClInclude Include="score.h" />
+    <ClInclude Include="UIBonus.h" />
+    <ClInclude Include="Resultlogo.h">
+      <Filter>ソース ファイル\Result</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
