--- a/ふぉるてっしも！.vcxproj
+++ b/ふぉるてっしも！.vcxproj
@@ -20,7 +20,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="enemy.cpp" />
-    <ClCompile Include="enemyRE.cpp" />
     <ClCompile Include="field.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="HitCheck.cpp" />
@@ -45,16 +44,15 @@
     <ClCompile Include="Library\WindowClass.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="messageBox.cpp" />
-    <ClCompile Include="name.cpp" />
     <ClCompile Include="ranking.cpp" />
     <ClCompile Include="Result.cpp" />
+    <ClCompile Include="Resultlogo.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="score.cpp" />
     <ClCompile Include="timer.cpp" />
     <ClCompile Include="Title.cpp" />
     <ClCompile Include="titlelogo.cpp" />
     <ClCompile Include="UIBonus.cpp" />
-    <ClCompile Include="voicetank.cpp" />
     <ClCompile Include="voiceten.cpp" />
     <ClCompile Include="voicetenTest.cpp" />
     <ClCompile Include="workHagiwara.cpp" />
@@ -68,7 +66,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="enemy.h" />
-    <ClInclude Include="enemyRE.h" />
     <ClInclude Include="field.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="HitCheck.h" />
@@ -94,17 +91,16 @@
     <ClInclude Include="Library\Vector.h" />
     <ClInclude Include="Library\WindowClass.h" />
     <ClInclude Include="messageBox.h" />
-    <ClInclude Include="name.h" />
     <ClInclude Include="ranking.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Result.h" />
+    <ClInclude Include="Resultlogo.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="score.h" />
     <ClInclude Include="timer.h" />
     <ClInclude Include="Title.h" />
     <ClInclude Include="titlelogo.h" />
     <ClInclude Include="UIBonus.h" />
-    <ClInclude Include="voicetank.h" />
     <ClInclude Include="voiceten.h" />
     <ClInclude Include="voicetenTest.h" />
     <ClInclude Include="workHagiwara.h" />
@@ -147,7 +143,6 @@
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
-    <WholeProgramOptimization>false</WholeProgramOptimization>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
