--- a/ふぉるてっしも！.vcxproj
+++ b/ふぉるてっしも！.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="AimPointer.cpp" />
     <ClCompile Include="FadeCurtain.cpp" />
     <ClCompile Include="finishcount.cpp" />
+    <ClCompile Include="GameSound.cpp" />
     <ClCompile Include="startcount.cpp" />
     <ClCompile Include="enemy.cpp" />
     <ClCompile Include="enemyRE.cpp" />
@@ -80,6 +81,7 @@
     <ClInclude Include="AimPointer.h" />
     <ClInclude Include="FadeCurtain.h" />
     <ClInclude Include="finishcount.h" />
+    <ClInclude Include="GameSound.h" />
     <ClInclude Include="startcount.h" />
     <ClInclude Include="enemy.h" />
     <ClInclude Include="enemyRE.h" />
