--- a/ふぉるてっしも！.vcxproj
+++ b/ふぉるてっしも！.vcxproj
@@ -63,6 +63,7 @@
     <ClCompile Include="Title.cpp" />
     <ClCompile Include="titlelogo.cpp" />
     <ClCompile Include="UIBonus.cpp" />
+    <ClCompile Include="VLauncher.cpp" />
     <ClCompile Include="voicetank.cpp" />
     <ClCompile Include="voiceten.cpp" />
     <ClCompile Include="voicetenTest.cpp" />
@@ -122,6 +123,7 @@
     <ClInclude Include="Title.h" />
     <ClInclude Include="titlelogo.h" />
     <ClInclude Include="UIBonus.h" />
+    <ClInclude Include="VLauncher.h" />
     <ClInclude Include="voicetank.h" />
     <ClInclude Include="voiceten.h" />
     <ClInclude Include="voicetenTest.h" />
