--- a/ふぉるてっしも！.vcxproj
+++ b/ふぉるてっしも！.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="FadeCurtain.cpp" />
     <ClCompile Include="finishcount.cpp" />
     <ClCompile Include="GameSound.cpp" />
+    <ClCompile Include="S-Editor.cpp" />
     <ClCompile Include="startcount.cpp" />
     <ClCompile Include="enemy.cpp" />
     <ClCompile Include="enemyRE.cpp" />
@@ -83,6 +84,7 @@
     <ClInclude Include="FadeCurtain.h" />
     <ClInclude Include="finishcount.h" />
     <ClInclude Include="GameSound.h" />
+    <ClInclude Include="S-Editor.h" />
     <ClInclude Include="startcount.h" />
     <ClInclude Include="enemy.h" />
     <ClInclude Include="enemyRE.h" />
