--- a/ふぉるてっしも！.vcxproj
+++ b/ふぉるてっしも！.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="FadeCurtain.cpp" />
     <ClCompile Include="finishcount.cpp" />
     <ClCompile Include="GameSound.cpp" />
+    <ClCompile Include="Library\Particle.cpp" />
     <ClCompile Include="S-Editor.cpp" />
     <ClCompile Include="startcount.cpp" />
     <ClCompile Include="enemy.cpp" />
@@ -84,6 +85,7 @@
     <ClInclude Include="FadeCurtain.h" />
     <ClInclude Include="finishcount.h" />
     <ClInclude Include="GameSound.h" />
+    <ClInclude Include="Library\Particle.h" />
     <ClInclude Include="S-Editor.h" />
     <ClInclude Include="startcount.h" />
     <ClInclude Include="enemy.h" />
