--- a/ふぉるてっしも！.vcxproj
+++ b/ふぉるてっしも！.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AimPointer.cpp" />
+    <ClCompile Include="EnemyDB.cpp" />
     <ClCompile Include="EnemyHP.cpp" />
     <ClCompile Include="FadeCurtain.cpp" />
     <ClCompile Include="finishcount.cpp" />
@@ -85,6 +86,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AimPointer.h" />
+    <ClInclude Include="EnemyDB.h" />
     <ClInclude Include="EnemyHP.h" />
     <ClInclude Include="FadeCurtain.h" />
     <ClInclude Include="finishcount.h" />
