--- a/ふぉるてっしも！.vcxproj
+++ b/ふぉるてっしも！.vcxproj
@@ -20,6 +20,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AimPointer.cpp" />
+    <ClCompile Include="EffectFeelBetter.cpp" />
+    <ClCompile Include="EffectVoicetenHit.cpp" />
     <ClCompile Include="EnemyDB.cpp" />
     <ClCompile Include="EnemyHP.cpp" />
     <ClCompile Include="FadeCurtain.cpp" />
@@ -86,6 +88,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AimPointer.h" />
+    <ClInclude Include="EffectFeelBetter.h" />
+    <ClInclude Include="EffectVoicetenHit.h" />
     <ClInclude Include="EnemyDB.h" />
     <ClInclude Include="EnemyHP.h" />
     <ClInclude Include="FadeCurtain.h" />
