--- a/ふぉるてっしも！.vcxproj
+++ b/ふぉるてっしも！.vcxproj
@@ -21,7 +21,9 @@
   <ItemGroup>
     <ClCompile Include="AimPointer.cpp" />
     <ClCompile Include="DefeatCounter.cpp" />
+    <ClCompile Include="EffectFB.cpp" />
     <ClCompile Include="EffectFeelBetter.cpp" />
+    <ClCompile Include="EffectVH.cpp" />
     <ClCompile Include="EffectVoicetenHit.cpp" />
     <ClCompile Include="EnemyDB.cpp" />
     <ClCompile Include="EnemyHP.cpp" />
@@ -93,7 +95,9 @@
   <ItemGroup>
     <ClInclude Include="AimPointer.h" />
     <ClInclude Include="DefeatCounter.h" />
+    <ClInclude Include="EffectFB.h" />
     <ClInclude Include="EffectFeelBetter.h" />
+    <ClInclude Include="EffectVH.h" />
     <ClInclude Include="EffectVoicetenHit.h" />
     <ClInclude Include="EnemyDB.h" />
     <ClInclude Include="EnemyHP.h" />
